chore(ci): add ci for check version in package

--- a/.github/workflows/build_enterprise_package.yaml
+++ b/.github/workflows/build_enterprise_package.yaml
@@ -5,12 +5,7 @@ on:
     branches:
       - 'enterprise'
       - 'dev/e/*'
-  push:
-    tags:
-      - 'e1.*'
-    branches:
-      - 'enterprise'
-      - 'dev/e/*'
+  workflow_call:
 
 jobs:
   build:
