--- a/.github/workflows/build_oss_package.yaml
+++ b/.github/workflows/build_oss_package.yaml
@@ -5,12 +5,7 @@ on:
     branches:
       - 'master'
       - 'dev/*'
-  push:
-    tags:
-      - 'v1.*'
-    branches:
-      - 'master'
-      - 'dev/*'
+  workflow_call:
 
 jobs:
   build:
