--- a/.github/workflows/build_oss_package.yaml
+++ b/.github/workflows/build_oss_package.yaml
@@ -6,11 +6,10 @@ on:
       - 'master'
       - 'dev/*'
   push:
-    tags:
-      - 'v1.*'
     branches:
       - 'master'
       - 'dev/*'
+  workflow_call:
 
 jobs:
   build:
